# avatar-python

./: COPYRIGHT  HOWTO.md  MANIFEST.in  README.rst  setup.py
avatar/: __init__.py  call_proxy.py  debuggable.py  system.py
avatar/bintools/: LICENSE
avatar/bintools/gdb/: gdb_debugger.py  mi.py  mi_parser.py  parse_stream.py  readme.txt  rsp.py
avatar/emulators/: emulator.py  null_emulator.py
avatar/emulators/s2e/: __init__.py  configuration.py  debug_s2e_emulator.py  s2e_emulator.py
avatar/interfaces/: s2e_remote_memory.py
avatar/interfaces/avatar_stub/: avatar_exceptions.py  avatar_messages.py  avatar_protocol.py  avatar_protocol_lowlevel.py
avatar/interfaces/gdb/: errors.py  gdb_server.py  protocol.py  protocol_lowlevel.py
avatar/plugins/: avatar_plugin.py  memory_range_identifier.py
avatar/targets/: avatarstub_target.py  gdbserver_target.py  jig.py  null_target.py  openocd_jig.py  openocd_target.py  target.py
avatar/util/: checksum.py  indexable_queue.py  ostools.py  processes.py  reference.py  socket_file.py
binary_translator/: CMakeLists.txt  test_translation.c  test_translation.py
binary_translator/cmake/: FindLLVM.cmake
binary_translator/include/lldc/: ArmReverseTranslators.h  ArrayMemoryObject.h  BasicBlockCache.h  ExtendedMCInst.h  FunctionCache.h  GeneratedBasicBlocks.h  InstructionDecoder.h  InstructionTranslationUnitCache.h  InstrumentMemoryAccessPass.h  LLVMArmInstructions.h  LLVMArmRegisters.h  NextInstructions.h  PathState.h  PathsManager.h  ProxyMemoryObject.h  RecordingMemoryManager.h  ReverseTranslateBasicBlock.h  ReverseTranslationConfiguration.h  ReverseTranslatorExceptions.h  SystemInformation.h  c_interface.h  test_code.h  util.h
binary_translator/src/: ArmReverseTranslators.cpp  ArrayMemoryObject.cpp  BasicBlockCache.cpp  FunctionCache.cpp  InstructionDecoder.cpp  InstructionTranslationUnitCache.cpp  InstrumentMemoryAccessPass.cpp  PathState.cpp  PathsManager.cpp  ProxyMemoryObject.cpp  RecordingMemoryManager.cpp  ReverseTranslationConfiguration.cpp  c_interface.cpp  python_interface.c  test_code.cpp  translate_arm.cpp  util.cpp
